# My3rdPartyGit

./: README.md
FreeImage/Doc/: Code1.txt  Code2.txt
freeglut-3.2.1/lib/Win32/: freeglut_static.lib  freeglut_staticd.lib
freeglut-3.2.1/lib/x64/: freeglut_static.lib  freeglut_staticd.lib
glad/include/glad/: glad.h
glad/src/: glad.c
glm-0.9.9.8/: doc.7z  test.7z  util.7z
log4c-1.2.4/: CMakeLists.txt
log4c-1.2.4/examples/: ConsoleApplication1.cpp
log4c-1.2.4/lib/Win32/Debug/: log4c_staticd.lib  log4cd.lib
log4c-1.2.4/lib/Win32/Release/: log4c.lib
log4c-1.2.4/libexpat-R_2_4_4/lib/Win32/: libexpat.lib  libexpatd.lib
log4c-1.2.4/src/: config.h
log4c-1.2.4/src/log4c/: appender_type_rollingfile.c  layout_type_dated_local_r.c  rollingpolicy_type_sizewin.c
log4c-1.2.4/src/sd/: domnode-expat.c  domnode-xml-scanner.c  sd_xplatform.h  sprintf.c  test.c
log4cplus/lib/x64/: log4cplus-v141.lib  log4cplusD-v141.lib  log4cplusSD-v141.7z
